--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_riverpod: ^2.4.4
+  riverpod_annotation: ^2.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   convex_bottom_bar: ^3.2.0
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  custom_lint:
+  riverpod_generator: ^3.0.0-dev.4
+  riverpod_lint: ^2.3.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
