--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   sqflite: ^2.3.0
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
+  cloud_firestore: ^4.12.2
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
