--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   easy_localization: ^3.0.3
   auto_size_text: ^3.0.0
   google_sign_in: 
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/translations/
+    - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
