--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   easy_localization: ^3.0.3
   auto_size_text: ^3.0.0
   google_sign_in: 
-  get: ^4.6.6
+  lottie: ^2.7.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ flutter:
   assets:
     - assets/translations/
     - assets/images/
+    - assets/animations/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -92,7 +94,17 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
-        - asset: assets/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Regular.ttf 
+    - family: BlackOpsOne
+      fonts:
+        - asset: assets/fonts/BlackOpsOne-Regular.ttf 
+    - family: LilitaOne
+      fonts:
+        - asset: assets/fonts/LilitaOne-Regular.ttf 
+    - family: Rowdies
+      fonts:
+        - asset: assets/fonts/Rowdies-Regular.ttf 
+
 
   #   - family: Trajan Pro
   #     fonts:
